working on 'repositories' css container. column spacing looks good, cion spacing , im having issues adjusting.

--- a/styles.css
+++ b/styles.css
@@ -208,6 +208,7 @@
 
 /* ---- */
 
+
 #repositories {
     background-color: rgba(49, 189, 240, 0.5);
     height: calc(100vh - 30vh);
@@ -216,13 +217,14 @@
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
     margin: auto;
-    padding: 20px;
     align-items: center;
+	gap: 7vh;
 }
 
 #repositories h1,
 #repositories h3 {
-    margin-top: 10%;
+    margin-top: 5vh;
+	padding: 5vh;
 }
 
 #repositories:hover {
@@ -234,34 +236,35 @@
     text-decoration: underline;
 }
 
-#repositories-item-container {
+/* #repositories-icons-container {
     display: flex;
     flex-direction: column;
-    /* border: 2px solid black; */
+    border: 2px solid black;
     height: 50%;
     width: 80%;
     justify-content: center;
     align-items: center;
     gap: 20px;
-    margin-bottom: 10px;
+    margin-bottom: 10px; */
 }
 
 #repositories-icons-container {
     display: flex;
     flex-direction: row;
-    /* border: 2px solid black; */
+    border: 10px solid black; 
     height: 50%;
-    width: 80%;
-    justify-content: center;
+    width: 90%;
+    justify-content: space-between;
     align-items: center;
-    gap: 30px;
+    gap: 10vw;
     margin-bottom: 10px;
 }
+
 .profile-link {
     margin-top: 20;
     font-family: 'Courier New', Courier, monospace;
     font-size: 25px;
-    font-weight: none;
+    font-weight: bold;
     color: white;
 }
 
